--- a/gay_sport_stickers/ios/GaySportStickersMsg/Info.plist
+++ b/gay_sport_stickers/ios/GaySportStickersMsg/Info.plist
@@ -11,5 +11,11 @@
 	</dict>
 	<key>UIFileSharingEnabled</key> 
 	<true/>
+	<key>com.apple.security.app-sandbox</key>
+	<true/>
+	<key>com.apple.security.files.user-selected.read-write</key>
+	<true/>
+ 	<key>LSSupportsOpeningDocumentsInPlace</key>
+    <true/>
 </dict>
 </plist>
