--- a/gay_sport_stickers/ios/Runner/Runner.entitlements
+++ b/gay_sport_stickers/ios/Runner/Runner.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.gaysSportPacks</string>
+		<string>group.KsoraTOOG</string>
 	</array>
 </dict>
 </plist>
