--- a/gay_sport_stickers/ios/SportLGBT/SportLGBT.entitlements
+++ b/gay_sport_stickers/ios/SportLGBT/SportLGBT.entitlements
@@ -6,5 +6,10 @@
 	<array>
 		<string>group.gaysSportPacks</string>
 	</array>
+
+	<key>com.apple.security.app-sandbox</key>
+	<true/>
+	<key>com.apple.security.files.user-selected.read-write</key>
+	<true/>
 </dict>
 </plist>
